# ClickPic

./: .clang-tidy  .gitignore  CMakeLists.txt  build.bat  package.json  readme.md
cmake/: FindWDK.cmake
src/: app.hpp  constant.hpp  definitions.hpp  driver_control.cpp  driver_control.hpp  main.cpp
src/base/: clicker.hpp  matcher.hpp  screen.h
src/driver/: definitions.hpp  dispatch.cpp  dispatch.hpp  driver.cpp  driver.h  memory.cpp  memory.hpp  mouse.cpp  mouse.hpp  ntapi.hpp  ntstructs.hpp
src/utils/: logger.hpp  timecalc.hpp
src/windows/: screen.hpp
